--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -4,22 +4,25 @@
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "lib": ["ES2022"],
-    "allowImportingTsExtensions": true,
+    "outDir": "./dist/server",
+    "rootDir": "./",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "noEmit": true,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["src/*"],
-      "@server/*": ["server/*"]
-    }
+    "moduleDetection": "force"
   },
   "include": [
-    "server/**/*.ts"
+    "server/**/*.ts",
+    "shared/**/*.ts"
   ],
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "src/**/*",
+    "**/*.js",
+    "**/*.vue"
+  ]
 }
