make MVP pt. 3 - enter pages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
       "@/*": ["src/*"],
       "@core/*": ["src/core/*"],
       "@modules/*": ["src/modules/*"],
-      "@shared/*": ["src/shared/*"],
+      "@shared/*": ["shared/*"],
       "@server/*": ["server/*"],
     },
     "types": ["node"]
